fixed spacing on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,14 @@ body {
   justify-content: space-around;
   text-align: center;
   align-items: center;
-  flex-wrap: nowrap;
+  flex-wrap: no-wrap;
   font-family: 'Major Mono Display', monospace;
   font-size: 3em;
   user-select: none;
 }
 
 .socials {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 .text {
@@ -57,8 +57,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 0 20px;
   width: 54px;
   height: 54px;
 }
@@ -113,8 +112,16 @@ img {
     justify-content: center;
     font-size: 2.25em;
   }
+  .text {
+    display: inline-block;
+    text-align: center;
+    align-self: center;
+  }
   noscript > h1 {
     font-size: 36px;
+  }
+  a {
+    margin: 0 10px;
   }
 }
 
@@ -147,7 +154,7 @@ img {
 }
 
 @media only screen 
-  and (min-device-width: 320px) 
+  and (min-device-width: 315px) 
   and (max-device-width: 967px) 
   and (orientation: landscape) { 
     .content {
